Bug 454516 - GMIC adds hidden layers to the calculation
Summary: GMIC adds hidden layers to the calculation
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: G'Mic for Krita (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks: 456463
  Show dependency treegraph
 
Reported: 2022-05-28 06:09 UTC by thetwo
Modified: 2022-07-08 00:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
pic (272.99 KB, image/png)
2022-05-28 06:09 UTC, thetwo
Details
pic (18.74 KB, image/png)
2022-05-28 09:47 UTC, thetwo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thetwo 2022-05-28 06:09:03 UTC
Created attachment 149277 [details]
pic

krita-nightly-x64-5.1.0-prealpha-0c31a5bcc5

STEPS TO REPRODUCE
1.Import a picture

2.Fill a layer with a color and hide it

3.Select "blend [seamless]" filter (or other), and change "input layers" to "all"“
Comment 1 thetwo 2022-05-28 09:47:30 UTC
Created attachment 149283 [details]
pic

Compared with gimp version, it seems that this is an original design.

However, the krita version removes some options of "input layers" and the entire "output mode"
Comment 2 amyspark 2022-05-31 00:50:14 UTC
> However, the krita version removes some options of "input layers" and the entire "output mode"

See bug 443014 for this. I should review it, given that I implemented all input modes, but not right now with a minor release in sight.
Comment 3 Bug Janitor Service 2022-06-01 21:56:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1464
Comment 4 amyspark 2022-06-02 18:43:42 UTC
Git commit ca0d473bcd570f0332458b296efce25bf6344631 by L. E. Segovia.
Committed on 02/06/2022 at 16:18.
Pushed by lsegovia into branch 'master'.

G'MIC: clean up layer retrieval and properly detect visible paint layers
Related: bug 453947

M  +0    -1    plugins/extensions/qmic/CMakeLists.txt
D  +0    -105  plugins/extensions/qmic/kis_input_output_mapper.cpp
D  +0    -30   plugins/extensions/qmic/kis_input_output_mapper.h
M  +92   -0    plugins/extensions/qmic/kis_qmic_import_tools.h
M  +10   -8    plugins/extensions/qmic/kis_qmic_interface.cpp

https://invent.kde.org/graphics/krita/commit/ca0d473bcd570f0332458b296efce25bf6344631
Comment 5 amyspark 2022-06-19 22:55:23 UTC
Reopening because the fix instead counts layers that are children of the current one. (The only documentation I have is the GIMP plugin, so I'll redo the calculations based on that one.)
Comment 6 amyspark 2022-06-20 00:47:32 UTC
Git commit b0a14385834071c07da26624defc446e682d5cb3 by L. E. Segovia.
Committed on 20/06/2022 at 00:46.
Pushed by lsegovia into branch 'master'.

G'MIC: InputMode::All must iterate from the root node

M  +22   -16   plugins/extensions/qmic/kis_qmic_import_tools.h
M  +9    -3    plugins/extensions/qmic/kis_qmic_interface.cpp

https://invent.kde.org/graphics/krita/commit/b0a14385834071c07da26624defc446e682d5cb3
Comment 7 amyspark 2022-06-20 00:49:42 UTC
Git commit 3f5707d17e638210df69102fe07356dc0c2af04e by L. E. Segovia.
Committed on 20/06/2022 at 00:49.
Pushed by lsegovia into branch 'krita/5.1'.

G'MIC: InputMode::All must iterate from the root node
(cherry picked from commit b0a14385834071c07da26624defc446e682d5cb3)

M  +22   -16   plugins/extensions/qmic/kis_qmic_import_tools.h
M  +9    -3    plugins/extensions/qmic/kis_qmic_interface.cpp

https://invent.kde.org/graphics/krita/commit/3f5707d17e638210df69102fe07356dc0c2af04e