G'MIC: clean up layer retrieval and properly detect visible paint layers

BUG: 454516
BUG: 453947